# rustmvc

./: Cargo.toml  LICENSE  README.md  build.rs
examples/: authentication.rs  dynamic_routes.rs  static_files.rs
src/: authentication.rs  controllers.rs  lib.rs  main.rs
src/views/: index.html
templates/: index.html
