[package]
name = "rustmvc"
version = "0.2.1"
edition = "2021"
authors = ["lorenzo"]
description = "A lightweight MVC framework for Rust"
license = "MIT"
repository = "https://github.com/lorennnzzoo/rustmvc"
homepage = "https://github.com/lorennnzzoo/rustmvc"
documentation = "https://docs.rs/rustmvc"
keywords = ["mvc", "web", "actix", "rust","webapi"]
readme = "README.md"


[dependencies]
actix-web = "4.11.0"
askama = "0.14.0"
chrono = "0.4.42"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
mime_guess = "2.0.5"
serde = "1.0.228"
